opt into secret creation

--- a/3.0.43.1/templates/admission-controller-secret.yaml
+++ b/3.0.43.1/templates/admission-controller-secret.yaml
@@ -1,4 +1,5 @@
 {{ if .Values.config.admissionControl.createService }}
+{{ if eq .Values.config.admissionControl.createSecret true}}
 apiVersion: v1
 kind: Secret
 data:
@@ -14,4 +15,5 @@ metadata:
   name: admission-control-tls
   namespace: stackrox
 type: Opaque
+{{ end }}
 {{ end }}
