--- a/3.0.43.1/templates/admission-controller-secret.yaml
+++ b/3.0.43.1/templates/admission-controller-secret.yaml
@@ -1,5 +1,4 @@
-{{ if .Values.config.admissionControl.createService }}
-{{ if eq .Values.config.admissionControl.createSecret true}}
+{{ if and .Values.config.admissionControl.createService (eq .Values.config.admissionControl.createSecret true) }}
 apiVersion: v1
 kind: Secret
 data:
@@ -15,5 +14,4 @@ metadata:
   name: admission-control-tls
   namespace: stackrox
 type: Opaque
-{{ end }}
 {{ end }}
