--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -13,7 +13,7 @@ jobs:
           SHELL=/bin/bash
           set -x
           echo "wd=$(pwd)"
-          echo "3.0.43.1" | grep -E '^\d+(\.\d+)*$'
+          echo "3.0.43.1" | grep -E '^\d+(\.\d+)*'
           exit 0
           echo "ls:"
           ls
