Add OSS README to workflow
- This README will be added with the next release

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -18,6 +18,8 @@ jobs:
           echo "LATEST VERSION is $LATEST_VERSION"
           sed -i.bak -E 's@(Latest version: |Latest%20version-|\[Latest version\]: \./)[0-9]+(\.[0-9]+)*@\1'"$LATEST_VERSION"'@g' README.md
           rm -f "README.md.bak" 2>/dev/null || true
+          sed -i.bak -E 's@(Latest version: |Latest%20version-|\[Latest version\]: \./)[0-9]+(\.[0-9]+)*@\1'"$LATEST_VERSION"'@g' opensource/README.md
+          rm -f "opensource/README.md.bak" 2>/dev/null || true
           rm -f latest 2>/dev/null || true
           ln -s "./${LATEST_VERSION}/" latest
           git add latest
