--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -18,7 +18,7 @@ jobs:
           echo "LATEST VERSION is $LATEST_VERSION"
           sed -i.bak -E 's@(Latest version: |Latest%20version-|\[Latest version\]: \./)[0-9]+(\.[0-9]+)*@\1'"$LATEST_VERSION"'@g' README.md
           rm -f "README.md.bak" 2>/dev/null || true
-          if test -f "opensource/README.md.bak"; then
+          if test -f "opensource/README.md"; then
             sed -i.bak -E 's@(Latest version: |Latest%20version-|\[Latest version\]: \./)[0-9]+(\.[0-9]+)*@\1'"$LATEST_VERSION"'@g' opensource/README.md
             rm -f "opensource/README.md.bak" 2>/dev/null || true
           fi
