--- a/4.1.2/secured-cluster-services/templates/sensor.yaml
+++ b/4.1.2/secured-cluster-services/templates/sensor.yaml
@@ -135,6 +135,12 @@ spec:
         - name: ROX_LOCAL_IMAGE_SCANNING_ENABLED
           value: "true"
         {{- end }}
+        { { - if ._rox.sensor.imageScanningV4.enabled } }
+        - name: ROX_SCANNER_V4_GRPC_ENDPOINT
+          value: { { printf "scannerV4.%s.svc:8443" .Release.Namespace } }
+        - name: ROX_SCANNER_V4_ENABLED
+          value: "true"
+        { { - end } }
         - name: ROX_HELM_CLUSTER_CONFIG_FP
           value: {{ quote ._rox._configFP }}
         {{- include "srox.envVars" (list . "deployment" "sensor" "sensor") | nindent 8 }}
