--- a/4.1.2/secured-cluster-services/templates/sensor.yaml
+++ b/4.1.2/secured-cluster-services/templates/sensor.yaml
@@ -135,7 +135,7 @@ spec:
         - name: ROX_LOCAL_IMAGE_SCANNING_ENABLED
           value: "true"
         {{- end }}
-        { { - if ._rox.sensor.imageScanningV4.enabled } }
+        { { - if ._rox.sensor.localImageScanning.enabled } }
         - name: ROX_SCANNER_V4_GRPC_ENDPOINT
           value: { { printf "scannerV4.%s.svc:8443" .Release.Namespace } }
         - name: ROX_SCANNER_V4_ENABLED
